Update API Organization

--- a/docs/reference/apis/spaces-api/v1_10.md
+++ b/docs/reference/apis/spaces-api/v1_10.md
@@ -1,6 +1,7 @@
 ---
-title: Spaces API Reference - v1.10
+title: v1.10
 description: Documentation for the Spaces API resources
+sidebar_position: 4
 ---
 import CrdDocViewer from '@site/src/components/CrdViewer';
 
