--- a/docs/reference/apis/spaces-api/v1_9.md
+++ b/docs/reference/apis/spaces-api/v1_9.md
@@ -1,6 +1,7 @@
 ---
-title: Spaces API Reference - v1.9
+title: v1.9
 description: Documentation for the Spaces API resources
+sidebar_position: 5
 ---
 import CrdDocViewer from '@site/src/components/CrdViewer';
 
