--- a/docs/reference/apis/spaces-api/v1_11.md
+++ b/docs/reference/apis/spaces-api/v1_11.md
@@ -1,6 +1,7 @@
 ---
-title: Spaces API Reference - v1.11
+title: v1.11
 description: Documentation for the Spaces API resources
+sidebar_position: 3
 ---
 import CrdDocViewer from '@site/src/components/CrdViewer';
 
