--- a/docs/reference/apis/spaces-api/v1_12.md
+++ b/docs/reference/apis/spaces-api/v1_12.md
@@ -1,6 +1,7 @@
 ---
-title: Spaces API Reference - v1.12
+title: v1.12
 description: Documentation for the Spaces API resources
+sidebar_position: 2
 ---
 import CrdDocViewer from '@site/src/components/CrdViewer';
 
