--- a/docs/reference/apis/spaces-api/v1_13.md
+++ b/docs/reference/apis/spaces-api/v1_13.md
@@ -1,6 +1,7 @@
 ---
-title: Spaces API Reference Latest (v1.13)
+title: Latest - v1.13
 description: Documentation for the Spaces API resources
+sidebar_position: 1
 ---
 import CrdDocViewer from '@site/src/components/CrdViewer';
 
